<resources>
    <string name="app_name">Oxy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="action_search">Search</string>

    <string name="menu_sales">Sales</string>
    <string name="menu_history">Riwayat</string>
    <string name="menu_customer">Pelanggan</string>
    <string name="menu_draft">Draft</string>
    <string name="menu_print_connect">Sambungkan Printer</string>
    <string name="menu_print_disconnect">Putuskan Printer</string>
    <string name="menu_logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_threedot">More</string>
    <string name="username">USERNAME :</string>
    <string name="username_hint">Masukan username</string>
    <string name="pin_hint">Masukan PIN</string>
    <string name="pin">PIN :</string>
    <string name="masuk">Masuk</string>
    <string name="open_cash">Open cash register</string>
    <string name="open_shift">Open Shift</string>
    <string name="cash_inhand">Cash in hand :</string>
    <string name="cash_hint">Masukan jumlah uang</string>
    <string name="store_location">Pilih lokasi store</string>
    <string name="input_pin">Silahkan input pin</string>
    <string name="false_pin">Pin yang di-input salah</string>
    <string name="lanjut_pembayaran">Lanjut Pembayaran</string>
    <string name="action_print">print</string>
    <string name="bayar">Bayar</string>
    <string name="penjualan_baru">Penjualan baru</string>
    <string name="masukan_jumlah">Masukan Jumlah</string>
    <string name="masukan_nomer">Masukan Nomer</string>
    <string name="jumlah">Jumlah :</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="card">Card</string>
    <string name="uang_lebih">Uang Lebih</string>
    <string name="uang_pas">Uang Pas</string>
    <string name="uang_diterima">Uang Diterima</string>
    <string name="total_pembayaran">TOTAL PEMBAYARAN</string>
    <string name="rp_30_000">Rp 30.000</string>
    <string name="total">Total</string>
    <string name="tambahan">Tambahan</string>
    <string name="member">Member</string>
    <string name="kasir">Kasir :</string>
    <string name="Pelanggan">Pelanggan :</string>
    <string name="no_pelanggan">Nomer :</string>
    <string name="perfume">Perfume 1 x 2</string>
    <string name="cash">Cash</string>
    <string name="tanggal">18-10-2022 12.00PM</string>
    <string name="id_transaksi">#01-001</string>
    <string name="sukses">Sukses</string>
    <string name="customer_group">Customer Group</string>
    <string name="platinum">Platinum</string>
    <string name="nama">Nama</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_add">Mobile*</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="alamat_1">Alamat baris 1</string>
    <string name="alamat_2">Alamat baris 2</string>
    <string name="action_add">Add</string>
    <string name="action_done">OK</string>
    <string name="customer">Customer</string>
    <string name="retry">Coba Lagi</string>
    <string name="search_hint">Masukan nama item</string>
    <string name="search_hint_customer">Masukan nama pelanggan</string>
    <string name="search_hint_discount">Masukan nama diskon</string>
    <string name="customer_name">Nama Pembeli</string>
    <string name="delete_cart">Hapus Keranjang ?</string>
    <string name="save_draft">Simpan transaksi ke draft ?</string>
    <string name="name">Nama :</string>
    <string name="customer_group_add">Grup Pelanggan</string>
    <string name="name_hint">Masukan Nama</string>
    <string name="mobile_hint">Masukan nomer</string>
    <string name="email_hint">Masukan email</string>
    <string name="alamat_hint">Masukan Alamat</string>
    <string name="kota">Kota</string>
    <string name="kota_hint">Masukan kota</string>
    <string name="send">Tambah</string>
    <string name="all">Semua</string>
    <string name="diskon_member">Diskon member</string>
    <string name="pilih_diskon_product">Pilih Diskon Product</string>
    <string name="matikan_diskon_product">Matikan diskon product</string>
    <string name="pembulatan">Pembulatan</string>
    <string name="discount">Diskon</string>
    <string name="kembalian">Kembalian</string>
    <string name="success_post_sales">Transaksi Sukses</string>
    <string name="berhasil">Berhasil</string>
    <string name="error_cash_value">Uang tidak boleh kurang dari Total Pembayaran</string>
    <string name="error_diskon_value">Diskon tidak boleh lebih besar dari Total Pembayaran</string>
    <string name="success_add_customer">Tambah Pelanggan Sukses</string>
    <string name="nama_produk">Nama produk</string>
    <string name="jumlah_history">Jumlah</string>
    <string name="harga_satuan">Harga</string>
    <string name="awalan">Awalan</string>
    <string name="bpk_ibu_tuan_nona">Bpk / Ibu / Tuan / Nona</string>
    <string name="nama_awal">Nama Depan*</string>
    <string name="masukan_nama_depan">Masukan nama depan</string>
    <string name="nama_tengah">Nama Tengah</string>
    <string name="masukan_nama_tengah">Masukan nama tengah</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="masukan_nama_belakang">Masukan nama belakang</string>
    <string name="tidak_ada">Tidak ada</string>
    <string name="logout">Logout ?</string>
    <string name="logout_juga_termasuk_melakukan_close_shift">Logout juga termasuk melakukan close shift</string>
    <string name="close_amount">Close amount :</string>
    <string name="closing_note">Closing note :</string>
    <string name="masukan_catatan_optional">Masukan Catatan (optional)</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="cash_info">Cash Info</string>
    <string name="cash_register">Cash register</string>
    <string name="total_payment">Total pembayaran</string>
    <string name="total_cash">Total cash</string>
    <string name="emptyDraft">Draft masih kosong</string>
    <string name="product">Produk</string>
    <string name="lanjut_transaksi">Lanjut transaksi</string>
    <string name="printer_not_connected">Belum ada printer yang tersambung</string>
    <string name="printer_on_process">Print nota dalam proses</string>
    <string name="printer_connected">Printer sukses tersambung</string>
    <string name="printer_disconnected">Printer sukses terputus</string>
    <string name="quantity_and_price">"%s x %s"</string>
    <string name="discount_product">"( -%s )"</string>
    <string name="save_draft_success">Sukses menyimpan ke Draft</string>
</resources>