<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.auth.logout.LogoutConfirmationDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_logout_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/logout_juga_termasuk_melakukan_close_shift"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_logout" />

        <TextView
            android:id="@+id/txt_close_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/close_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_logout_message" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_close_amount"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:backgroundTint="@color/gray"
            android:hint="@string/cash_hint"
            android:inputType="number"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursor_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_close_amount" />

        <TextView
            android:id="@+id/txt_closing_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/closing_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_close_amount" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_closing_note"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:backgroundTint="@color/gray"
            android:hint="@string/masukan_catatan_optional"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursor_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_closing_note" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_no"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/login_btn"
            android:text="@string/tidak"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_yes"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_closing_note" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_yes"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/login_btn"
            android:text="@string/ya"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/edt_closing_note"
            app:layout_constraintTop_toBottomOf="@+id/edt_closing_note" />

        <include
            android:id="@+id/loading_state"
            layout="@layout/item_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>