<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".ui.customer.component.AddCustomerDialogFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/add_customer_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_customer_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_group_add"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dropdown_customer_group"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="380dp"
                android:layout_height="50dp"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:inputType="none"
                app:endIconTint="@color/bg_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_customer_group">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_store_menu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray"
                    android:inputType="none"
                    android:labelFor="@id/dropdown_store"
                    android:singleLine="true"
                    android:text="@string/tidak_ada" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_awalan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/awalan"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dropdown_customer_group" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_awalan"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:background="@color/gray"
                android:hint="@string/bpk_ibu_tuan_nona"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_awalan" />

            <TextView
                android:id="@+id/txt_nama_depan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nama_awal"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_awalan" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nama_depan"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:background="@color/gray"
                android:hint="@string/masukan_nama_depan"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_nama_depan" />

            <TextView
                android:id="@+id/txt_nama_tengah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nama_tengah"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_nama_depan" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nama_tengah"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:background="@color/gray"
                android:gravity="top"
                android:hint="@string/masukan_nama_tengah"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="5"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_nama_tengah" />

            <TextView
                android:id="@+id/txt_nama_belakang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_belakang"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_nama_tengah" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nama_belakang"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:background="@color/gray"
                android:hint="@string/masukan_nama_belakang"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_nama_belakang" />

            <TextView
                android:id="@+id/txt_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_add"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_nama_belakang" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_mobile"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:background="@color/gray"
                android:hint="@string/mobile_hint"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_mobile" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_mobile" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:background="@color/gray"
                android:hint="@string/email_hint"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_email" />

            <TextView
                android:id="@+id/txt_alamat1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat_1"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_email" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_alamat1"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:background="@color/gray"
                android:hint="@string/alamat_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_alamat1" />

            <TextView
                android:id="@+id/txt_alamat2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat_2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_alamat1" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_alamat2"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:background="@color/gray"
                android:hint="@string/alamat_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_alamat2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/login_btn"
                android:text="@string/send"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_alamat2" />

            <include
                android:id="@+id/loading_state"
                layout="@layout/item_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>